--- a/sanity/tsconfig.json
+++ b/sanity/tsconfig.json
@@ -12,6 +12,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "../app/interface.ts"],
   "exclude": ["node_modules"]
 }
